<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/main_home">

        <item android:id="@+id/home"
            android:checkable="true"
            android:title="Jots."
            android:icon="@drawable/jot"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/secure_part"
        >
            <item android:title="@string/secure"
                android:id="@+id/safe"
                android:icon="@drawable/ic_outline_lock_24px"/>

            <item android:title="@string/archive"
                android:id="@+id/archive"
                android:icon="@drawable/ic_outline_archive"/>
    </group>


            <item android:title="@string/trash"
                android:id="@+id/trash"
                android:icon="@drawable/ic_delete"/>


    <group android:checkableBehavior="single"
        android:id="@+id/about" >
        <item
            android:id="@+id/love"
            android:icon="@drawable/ic_outline_favorite_border_24px"
            android:title="Support Development" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_outline_settings_24px"
            android:title="settings" />
    </group>


</menu>